# ml-intern-assessment

./: .gitignore  pyproject.toml  requirements.txt
ml-assignment/: README.md  evaluation.md
ml-assignment/src/: generate.py  ngram_model.py
task2/: demo.py  evaluation.md  scaled_dot_product_attention.py
